fix: text align

--- a/src/styles/scss/index.scss
+++ b/src/styles/scss/index.scss
@@ -84,6 +84,7 @@ button {
     font-family: $font-secondary;
     font-size: 2rem;
     margin-top: 0.5em;
+    text-align: center;
     text-shadow: 0 0.125em 0.125em rgba(0, 0, 0, 0.25);
   }
 
